--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,16 @@
         <!-- </TEST> -->
 
 
+
+        <!-- <TEST> -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- </TEST> -->
+
+
     </dependencies>
 
     <profiles>
