--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
         <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
+        <validation-api.version>2.0.1.Final</validation-api.version>
 
 
     </properties>
@@ -62,6 +63,21 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <!-- </DATABASE> -->
+
+        <!-- <VALIDATION_OBJECTS> -->
+
+<!--        <dependency>-->
+<!--            <groupId>javax.validation</groupId>-->
+<!--            <artifactId>validation-api</artifactId>-->
+<!--            <version>${validation-api.version}</version>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
+        <!-- </VALIDATION_OBJECTS> -->
 
 
         <!-- <TEST> -->
